[gd_scene load_steps=7 format=3 uid="uid://dqbxne3nspjaf"]

[ext_resource type="Script" uid="uid://clkq7wdit5ip8" path="res://Menu Principal/MenuPrincipal.gd" id="1_wweap"]
[ext_resource type="VideoStream" uid="uid://nrxnjlcx0rm8" path="res://Imagens de Backgorund menu/menu neutro.ogv" id="2_g5mwa"]
[ext_resource type="PackedScene" uid="uid://cop1g3lxprhax" path="res://Menu Principal/Menu de Opcoes/MenuDeOpcoes.tscn" id="3_andfb"]
[ext_resource type="Script" uid="uid://c2xn3xa6338gt" path="res://Menu Principal/VideoMenu.gd" id="3_ocaup"]
[ext_resource type="FontFile" uid="uid://cfhb28salhxn" path="res://Fonts/terminal-grotesque.ttf" id="3_prxhe"]
[ext_resource type="Script" uid="uid://blefx71ed7j0s" path="res://ControladorMusica.gd" id="6_cf3kj"]

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wweap")

[node name="VideoMenu" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -6.0
offset_right = 10.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("2_g5mwa")
autoplay = true
expand = true
loop = true
script = ExtResource("3_ocaup")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 2

[node name="pagar_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
show_behind_parent = true
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.489622, 0.489622, 0.489622, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_prxhe")
theme_override_font_sizes/font_size = 32
text = "Nos pague uma breja
"
flat = true

[node name="Separador2" type="Control" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(530, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 18
alignment = 1

[node name="jogar_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.490196, 0.490196, 0.490196, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_prxhe")
theme_override_font_sizes/font_size = 48
text = "Jogar"
flat = true

[node name="carregar_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
show_behind_parent = true
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.489622, 0.489622, 0.489622, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_prxhe")
theme_override_font_sizes/font_size = 48
text = "Carregar"
flat = true

[node name="opcao_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
show_behind_parent = true
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.490196, 0.490196, 0.490196, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_prxhe")
theme_override_font_sizes/font_size = 48
text = "Opções
"
flat = true

[node name="sair_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
show_behind_parent = true
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.490196, 0.490196, 0.490196, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_prxhe")
theme_override_font_sizes/font_size = 48
text = "Sair
"
flat = true

[node name="Separador" type="Control" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="MenuDeOpcoes" parent="." instance=ExtResource("3_andfb")]
visible = false
layout_mode = 1

[node name="ControladorMusica" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_cf3kj")
